--- a/Joining Skeleton.ipynb
+++ b/Joining Skeleton.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "                  mode=\"2ddash\", opacity=1.)\n",
     "\n",
     "\n",
-    "def plot_subgraph(vertices, edges, vertex_properties, subgraph_no):\n",
+    "def plot_subgraph_old(vertices, edges, vertex_properties, subgraph_no):\n",
     "    _, subgraph_edges = get_subgraph(edges, subgraph_no)\n",
     "    begin_verts = vertices[subgraph_edges[:, 0], :]\n",
     "    end_verts = vertices[subgraph_edges[:, 1], :]\n",
@@ -105,6 +105,20 @@
     "                  vector_components[:, 2], scalars=distances, mode=\"2ddash\", opacity=1., scale_mode=\"scalar\",\n",
     "                  scale_factor=1, color=(1, 1, 1))\n",
     "\n",
+    "def plot_subgraph(subgraph, vertices, points_kwargs={}, quiver_kwargs={}):\n",
+    "    subgraph_edges = np.array(subgraph.edges)\n",
+    "    begin_verts = vertices[subgraph_edges[:, 0], :]\n",
+    "    end_verts = vertices[subgraph_edges[:, 1], :]\n",
+    "    vector_components = end_verts - begin_verts\n",
+    "    distances = np.sqrt(np.sum(np.square(end_verts - begin_verts), axis=1))\n",
+    "    vertex_mask = np.unique(subgraph_edges.reshape((-1, 1)))\n",
+    "\n",
+    "    mlab.points3d(vertices[vertex_mask, 0], vertices[vertex_mask, 1], vertices[vertex_mask, 2],\n",
+    "                  scale_mode='scalar', scale_factor=1, opacity=0.1, **points_kwargs)\n",
+    "    mlab.quiver3d(begin_verts[:, 0], begin_verts[:, 1], begin_verts[:, 2], vector_components[:, 0],\n",
+    "                  vector_components[:, 1],\n",
+    "                  vector_components[:, 2], scalars=distances, mode=\"2ddash\", opacity=1., scale_mode=\"scalar\",\n",
+    "                  scale_factor=1, **quiver_kwargs)\n",
     "\n",
     "def get_subgraph(edges, subgraph_no):\n",
     "    G = nx.Graph()\n",
@@ -186,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +209,11 @@
      "text": [
       "Loading skeletons, creating graphs\n",
       "Loading skeleton data from pickle\n",
-      "Reading distance matrix from file: distance_matrix_brady129.pickle\n"
+      "Calculating distance matrix:\n",
+      "Finding connected component leaves\n",
+      "Finding neighbors\n",
+      "Calculating MST\n",
+      "Writing distance matrix and MST: distance_matrix_brady129.pickle\n"
      ]
     }
    ],
@@ -314,21 +332,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[898.14599609, 774.08898926,  15.        ],\n",
+       "       [897.99798584, 773.309021  ,  15.        ],\n",
+       "       [898.10198975, 773.99102783,  15.        ],\n",
+       "       [898.02801514, 773.69299316,  15.        ],\n",
+       "       [897.99700928, 773.125     ,  15.        ]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.unlink(pickle_name)"
+    "mean_root_vert = np.average(root_verts, axis=0).reshape((1,3))\n",
+    "\n",
+    "def get_subgraph_vector(subgraph, vertices, mean_root_vert):\n",
+    "    degrees = np.array(subgraph.degree())\n",
+    "    leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
+    "    leaf_verts = vertices[leaf_indices, :]\n",
+    "    distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
+    "    root_vector = np.mean(leaf_verts - distal_leaf, axis=0)\n",
+    "    root_vector = root_vector/np.linalg.norm(root_vector)\n",
+    "    return (root_vector, distal_leaf)\n",
+    "    \n",
+    "def get_elliptical_distance(s_verts, d_verts, alpha, vector):\n",
+    "    d_verts_br = d_verts[:, None, None, :]\n",
+    "    dxdxdz = d_verts_br-s_verts\n",
+    "    dx = dxdxdz[:, :, :, 0]\n",
+    "    dy = dxdxdz[:, :, :, 1]\n",
+    "    dz = dxdxdz[:, :, :, 2]\n",
+    "    sq_distance = dx*dx + dy*dy + dz*dz\n",
+    "    print(sq_distance)\n",
+    "    alpha = 0.9\n",
+    "    final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
+    "    return(dxdydz)\n",
+    "    \n",
+    "sg1 = G.subgraph(subgraphs[4200])\n",
+    "sg2 = G.subgraph(subgraphs[4201])\n",
+    "vector, distal_leaf = get_subgraph_vector(sg1, vertices, mean_root_vert)\n",
+    "vector = vector.reshape(1,3)\n",
+    "distal_leaf = distal_leaf.reshape(1,3)\n",
+    "s_verts = vertices[sg1.nodes, :]\n",
+    "d_verts = vertices[sg2.nodes, :]\n",
+    "dxdydz = d_verts[:, None, None, :] - s_verts\n",
+    "dxdydz[3,0,:,:]\n",
+    "\n",
+    "#get_elliptical_distance(s_verts, d_verts, alpha, vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{343348, 349016, 408572, 408573, 408579}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlab.points3d(s_verts[:,0], s_verts[:,1], s_verts[:,2])\n",
+    "plot_edges(root_edges, vertices, color=(0,0,0), line_width=3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2]\n",
+      " [ 3  4  5]\n",
+      " [ 6  7  8]\n",
+      " [ 9 10 11]]\n",
+      "[[2 3 4]\n",
+      " [5 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(12).reshape((4,3))\n",
+    "b = np.arange(2,8).reshape((2,3))\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 2  2  2]\n",
+      "   [-1 -1 -1]\n",
+      "   [-4 -4 -4]\n",
+      "   [-7 -7 -7]]]\n",
+      "\n",
+      "\n",
+      " [[[ 5  5  5]\n",
+      "   [ 2  2  2]\n",
+      "   [-1 -1 -1]\n",
+      "   [-4 -4 -4]]]]\n",
+      "[[[ 12   3  48 147]]\n",
+      "\n",
+      " [[ 75  12   3  48]]]\n",
+      "[[[ 7.31318317  1.82829579 29.25273269 89.58649387]]\n",
+      "\n",
+      " [[45.70739483  7.31318317  1.82829579 29.25273269]]]\n",
+      "(2, 1, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b_br = b[:, None, None, :]\n",
+    "res = b_br-a\n",
+    "print(res)\n",
+    "dx = res[:, :, :, 0]\n",
+    "dy = res[:, :, :, 1]\n",
+    "dz = res[:, :, :, 2]\n",
+    "sq_distance = dx*dx + dy*dy + dz*dz\n",
+    "print(sq_distance)\n",
+    "alpha = 0.9\n",
+    "final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
+    "final_distance = final_distance.reshape()\n",
+    "print(final_distance)\n",
+    "print(final_distance.shape)\n",
+    "# res_sum = np.sum(res, axis=3)\n",
+    "# final_distance = res_sum.reshape((b.shape[0], a.shape[0]))\n",
+    "# a: m x n\n",
+    "# b: o x n\n",
+    "# f(a,b): o x 1 x m x n\n",
+    "# print(res.reshape(2,2,3))\n",
+    "# np.sum(, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = np.array([1,0,0])\n",
-    "v = np.array([1,0,0])"
+    "subgraph = G.subgraph(subgraphs[4200])\n",
+    "subgraph_edges = np.array(subgraph.edges)\n",
+    "plot_subgraph(subgraph, vertices)\n",
+    "\n",
+    "mlab.quiver3d(distal_leaf[:, 0], distal_leaf[:, 1], distal_leaf[:, 2], vector[:, 0],\n",
+    "                     vector[:, 1],\n",
+    "                     vector[:, 2], scalars=np.array([20]))\n",
+    "mlab.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlab.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-146-21d438028d9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdistal_leaf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
+   "source": [
+    "distal_leaf[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.unlink(pickle_name)"
    ]
   },
   {
