Completed elliptical distance

--- a/Joining Skeleton.ipynb
+++ b/Joining Skeleton.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,15 +166,6 @@
     "                         vector_components[:, 1],\n",
     "                         vector_components[:, 2], scalars=distances, **plot_args)\n",
     "\n",
-    "\n",
-    "cycle1 = np.array(\n",
-    "    [[118766, 118638], [118638, 269452], [269452, 118838], [118838, 269788], [269788, 118334], [118334, 269450],\n",
-    "     [269450, 118682], [118682, 269451], [269451, 118713], [118713, 118844], [118844, 118840], [118840, 269837],\n",
-    "     [269837, 118883], [118883, 269863], [269863, 118853], [118853, 269864], [269864, 118884], [118884, 269850],\n",
-    "     [269850, 118855], [118855, 269760], [269760, 118850], [118850, 269849], [269849, 118836], [118836, 269851],\n",
-    "     [269851, 118882], [118882, 269838], [269838, 118826], [118826, 269831], [269831, 118594], [118594, 118766]])\n",
-    "\n",
-    "\n",
     "# plot_subgraph(vertices, edges, vertex_properties, 0)\n",
     "\n",
     "# skel1 = PlyData.read(\"v2highres_skel.ply\")\n",
@@ -195,12 +186,49 @@
     "         vz >= (cz-half), vz <= (cz+half))), :]\n",
     "    return selected\n",
     "\n",
+    "def get_subgraph_vector(subgraph, vertices, mean_root_vert):\n",
+    "    degrees = np.array(subgraph.degree())\n",
+    "    leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
+    "    leaf_verts = vertices[leaf_indices, :]\n",
+    "    distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
+    "    root_vector = np.mean(vertices[subgraph.nodes, :] - distal_leaf, axis=0)\n",
+    "    norm = np.linalg.norm(root_vector)\n",
+    "    if norm != 0:\n",
+    "        root_vector = root_vector/norm\n",
+    "    return root_vector.reshape([1, -1])\n",
+    "    \n",
+    "def get_elliptical_distance(s_verts, d_verts, alpha, vector):\n",
+    "    d_verts_br = d_verts[:, None, None, :]\n",
+    "    dxdxdz = d_verts_br-s_verts\n",
+    "    \n",
+    "#     vectors = dxdxdz[0,0,:,:]\n",
+    "#     norms = np.linalg.norm(vectors, axis=1)\n",
+    "#     print(s_verts)\n",
+    "#     print(vectors)\n",
+    "#     print(norms)\n",
+    "    \n",
+    "#     dest_vertex = d_verts[0, :].reshape([1, -1])\n",
+    "#     mlab.points3d(dest_vertex[:, 0], dest_vertex[:, 1], dest_vertex[:,2], color=)\n",
+    "    \n",
+    "#     mlab.quiver3d(s_verts[:, 0], s_verts[:, 1], s_verts[:, 2], vectors[:, 0],\n",
+    "#                      vectors[:, 1],\n",
+    "#                      vectors[:, 2], scalars=norms, scale_mode=\"scalar\", scale_factor=1, line_width=5)\n",
+    "    \n",
+    "    dx = dxdxdz[:, :, :, 0]\n",
+    "    dy = dxdxdz[:, :, :, 1]\n",
+    "    dz = dxdxdz[:, :, :, 2]\n",
+    "    sq_distance = dx*dx + dy*dy + dz*dz\n",
+    "    alpha = 0.9\n",
+    "    final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
+    "    final_distance = np.transpose(final_distance.reshape(d_verts.shape[0], s_verts.shape[0]))\n",
+    "    return(final_distance)\n",
+    "\n",
     "# SUBGRAPH_SIZE_THRESHOLD = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +265,7 @@
     "root_degrees = np.array(G.degree(root_indices))\n",
     "root_leaves = root_degrees[root_degrees[:, 1] == 1, 0]\n",
     "leaf_verts = vertices[root_leaves, :]\n",
-    "root_mean = np.mean(root_verts, axis=0)\n",
+    "root_mean = np.mean(root_verts, axis=0).reshape((1,3))\n",
     "\n",
     "pickle_name = \"distance_matrix_{}.pickle\".format(DIRECTORY)\n",
     "if os.path.exists(pickle_name):\n",
@@ -279,8 +307,11 @@
     "            max_distance = max_distance + 10\n",
     "        leaf = leaf.reshape(1, -1)\n",
     "        # TODO: use elliptical distance here\n",
-    "        distances = spatial.distance_matrix(leaf, neighbors[:, :3])\n",
+    "        # distances = spatial.distance_matrix(leaf, neighbors[:, :3])\n",
     "        #     print(distances)\n",
+    "        sg_vector = get_subgraph_vector(G.subgraph(subgraphs[subgraph]), vertices, mean_root_vert=root_mean)\n",
+    "#         print(sg_vector.shape)\n",
+    "        distances = get_elliptical_distance(leaf, neighbors[:, :3], alpha=0.8, vector=sg_vector)\n",
     "        distance_matrix[leaf_idx, neighbors[:, 3].astype(int)] = distances\n",
     "        ct = ct + 1\n",
     "        \n",
@@ -295,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 293,
    "metadata": {
     "scrolled": true
    },
@@ -332,22 +363,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[898.14599609, 774.08898926,  15.        ],\n",
-       "       [897.99798584, 773.309021  ,  15.        ],\n",
-       "       [898.10198975, 773.99102783,  15.        ],\n",
-       "       [898.02801514, 773.69299316,  15.        ],\n",
-       "       [897.99700928, 773.125     ,  15.        ]])"
+       "array([1576., 1253.,  326.])"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vertices[1688]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1582., 1252.,  332.])"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vertices[116252]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1688, 4728]])"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end_indices_sub[end_indices_sub[:, 0]==1688, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1688, 108290}"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subgraphs[4728]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0.])"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subgraph = G.subgraph(subgraphs[4728])\n",
+    "mean_root_vert = root_mean\n",
+    "\n",
+    "degrees = np.array(subgraph.degree())\n",
+    "leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
+    "leaf_verts = vertices[leaf_indices, :]\n",
+    "distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
+    "root_vector = np.mean(vertices[subgraph.nodes, :] - distal_leaf, axis=0)\n",
+    "norm = np.linalg.norm(root_vector)\n",
+    "if norm != 0:\n",
+    "    root_vector = root_vector/norm\n",
+    "\n",
+    "\n",
+    "root_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[898.14599609 774.08898926  15.        ]\n",
+      " [897.99798584 773.309021    15.        ]\n",
+      " [898.10198975 773.99102783  15.        ]\n",
+      " [898.02801514 773.69299316  15.        ]\n",
+      " [897.99700928 773.125       15.        ]]\n",
+      "[[-2.05993652e-01  7.89110107e+01  7.00000000e+00]\n",
+      " [-5.79833984e-02  7.96909790e+01  7.00000000e+00]\n",
+      " [-1.61987305e-01  7.90089722e+01  7.00000000e+00]\n",
+      " [-8.80126953e-02  7.93070068e+01  7.00000000e+00]\n",
+      " [-5.70068359e-02  7.98750000e+01  7.00000000e+00]]\n",
+      "[79.22114648 79.99784683 79.3186228  79.61538218 80.18116284]\n"
+     ]
     }
    ],
    "source": [
@@ -365,25 +512,41 @@
     "def get_elliptical_distance(s_verts, d_verts, alpha, vector):\n",
     "    d_verts_br = d_verts[:, None, None, :]\n",
     "    dxdxdz = d_verts_br-s_verts\n",
+    "    \n",
+    "    vectors = dxdxdz[0,0,:,:]\n",
+    "    norms = np.linalg.norm(vectors, axis=1)\n",
+    "    print(s_verts)\n",
+    "    print(vectors)\n",
+    "    print(norms)\n",
+    "    \n",
+    "    dest_vertex = d_verts[0, :].reshape([1, -1])\n",
+    "    mlab.points3d(dest_vertex[:, 0], dest_vertex[:, 1], dest_vertex[:,2], color=)\n",
+    "    \n",
+    "    mlab.quiver3d(s_verts[:, 0], s_verts[:, 1], s_verts[:, 2], vectors[:, 0],\n",
+    "                     vectors[:, 1],\n",
+    "                     vectors[:, 2], scalars=norms, scale_mode=\"scalar\", scale_factor=1, line_width=5)\n",
+    "    \n",
     "    dx = dxdxdz[:, :, :, 0]\n",
     "    dy = dxdxdz[:, :, :, 1]\n",
     "    dz = dxdxdz[:, :, :, 2]\n",
     "    sq_distance = dx*dx + dy*dy + dz*dz\n",
-    "    print(sq_distance)\n",
     "    alpha = 0.9\n",
     "    final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
-    "    return(dxdydz)\n",
-    "    \n",
+    "    final_distance = np.transpose(final_distance.reshape(d_verts.shape[0], s_verts.shape[0]))\n",
+    "    return(final_distance)\n",
+    "\n",
+    "mlab.clf()\n",
     "sg1 = G.subgraph(subgraphs[4200])\n",
     "sg2 = G.subgraph(subgraphs[4201])\n",
+    "plot_subgraph(sg1, vertices)\n",
+    "plot_subgraph(sg2, vertices)\n",
     "vector, distal_leaf = get_subgraph_vector(sg1, vertices, mean_root_vert)\n",
     "vector = vector.reshape(1,3)\n",
     "distal_leaf = distal_leaf.reshape(1,3)\n",
     "s_verts = vertices[sg1.nodes, :]\n",
     "d_verts = vertices[sg2.nodes, :]\n",
-    "dxdydz = d_verts[:, None, None, :] - s_verts\n",
-    "dxdydz[3,0,:,:]\n",
-    "\n",
+    "get_elliptical_distance(s_verts, d_verts, alpha, vector)\n",
+    "mlab.show()\n",
     "#get_elliptical_distance(s_verts, d_verts, alpha, vector)"
    ]
   },
@@ -435,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -452,13 +615,18 @@
       "   [ 2  2  2]\n",
       "   [-1 -1 -1]\n",
       "   [-4 -4 -4]]]]\n",
+      "[[ 2  2  2]\n",
+      " [-1 -1 -1]\n",
+      " [-4 -4 -4]\n",
+      " [-7 -7 -7]]\n",
       "[[[ 12   3  48 147]]\n",
       "\n",
       " [[ 75  12   3  48]]]\n",
-      "[[[ 7.31318317  1.82829579 29.25273269 89.58649387]]\n",
-      "\n",
-      " [[45.70739483  7.31318317  1.82829579 29.25273269]]]\n",
-      "(2, 1, 4)\n"
+      "[[ 7.31318317 45.70739483]\n",
+      " [ 1.82829579  7.31318317]\n",
+      " [29.25273269  1.82829579]\n",
+      " [89.58649387 29.25273269]]\n",
+      "(4, 2)\n"
      ]
     }
    ],
@@ -469,11 +637,12 @@
     "dx = res[:, :, :, 0]\n",
     "dy = res[:, :, :, 1]\n",
     "dz = res[:, :, :, 2]\n",
+    "\n",
     "sq_distance = dx*dx + dy*dy + dz*dz\n",
     "print(sq_distance)\n",
     "alpha = 0.9\n",
     "final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
-    "final_distance = final_distance.reshape()\n",
+    "final_distance = np.transpose(final_distance.reshape(b.shape[0], a.shape[0]))\n",
     "print(final_distance)\n",
     "print(final_distance.shape)\n",
     "# res_sum = np.sum(res, axis=3)\n",
@@ -487,13 +656,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_subgraph_vector_1(subgraph, vertices, mean_root_vert):\n",
+    "    degrees = np.array(subgraph.degree())\n",
+    "    leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
+    "    leaf_verts = vertices[leaf_indices, :]\n",
+    "    distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
+    "    root_vector = np.mean(vertices[subgraph.nodes, :] - distal_leaf, axis=0)\n",
+    "    root_vector = root_vector/np.linalg.norm(root_vector)\n",
+    "    return root_vector.reshape([1, -1]), distal_leaf.reshape([1, -1])\n",
+    "\n",
+    "mlab.clf()\n",
+    "\n",
     "subgraph = G.subgraph(subgraphs[4200])\n",
     "subgraph_edges = np.array(subgraph.edges)\n",
     "plot_subgraph(subgraph, vertices)\n",
+    "\n",
+    "root_vector, distal_leaf = get_subgraph_vector_1(subgraph, vertices, mean_root_vert)\n",
     "\n",
     "mlab.quiver3d(distal_leaf[:, 0], distal_leaf[:, 1], distal_leaf[:, 2], vector[:, 0],\n",
     "                     vector[:, 1],\n",
@@ -503,11 +685,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.46410162,  1.73205081,  6.92820323, 12.12435565])"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mlab.show()"
+    "np.linalg.norm(res[0,0,:,:], axis=1)"
    ]
   },
   {
@@ -547,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
