Got bidirectional elliptical distance!

--- a/Joining Skeleton.ipynb
+++ b/Joining Skeleton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,19 +186,32 @@
     "         vz >= (cz-half), vz <= (cz+half))), :]\n",
     "    return selected\n",
     "\n",
-    "def get_subgraph_vector(subgraph, vertices, mean_root_vert):\n",
+    "def get_subgraph_vector(subgraph, vertices, mean_root_vert, get_distal_leaf=False):\n",
     "    degrees = np.array(subgraph.degree())\n",
-    "    leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
+    "    leaf_indices = degrees[degrees[:, 1] == np.min(degrees[:, 1]), 0]\n",
     "    leaf_verts = vertices[leaf_indices, :]\n",
+    "#     try:\n",
     "    distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
+    "#     except Exception as e:\n",
+    "#         print(\"Degrees: {}\".format(degrees))\n",
+    "#         print(\"Leaf verts:\\n{}\".format(leaf_verts))\n",
+    "#         print(\"Leaf indices:\\n{}\".format(leaf_indices))\n",
+    "#         raise e\n",
     "    root_vector = np.mean(vertices[subgraph.nodes, :] - distal_leaf, axis=0)\n",
     "    norm = np.linalg.norm(root_vector)\n",
     "    if norm != 0:\n",
     "        root_vector = root_vector/norm\n",
-    "    return root_vector.reshape([1, -1])\n",
+    "    if not get_distal_leaf:\n",
+    "        return root_vector.reshape([1, -1])\n",
+    "    else:\n",
+    "        return root_vector.reshape([1, -1]), distal_leaf.reshape([1, -1])\n",
     "    \n",
-    "def get_elliptical_distance(s_verts, d_verts, alpha, vector):\n",
+    "def get_elliptical_distance(s_verts, d_verts, alpha, s_vectors, beta, d_vectors):\n",
+    "    # s_verts: m x 3\n",
+    "    # d_verts: o x 3\n",
+    "    # f(a,b): o x 1 x m x 3\n",
     "    d_verts_br = d_verts[:, None, None, :]\n",
+    "    \n",
     "    dxdxdz = d_verts_br-s_verts\n",
     "    \n",
     "#     vectors = dxdxdz[0,0,:,:]\n",
@@ -218,8 +231,11 @@
     "    dy = dxdxdz[:, :, :, 1]\n",
     "    dz = dxdxdz[:, :, :, 2]\n",
     "    sq_distance = dx*dx + dy*dy + dz*dz\n",
-    "    alpha = 0.9\n",
-    "    final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
+    "#     alpha = 0.9\n",
+    "#     beta = 0.9\n",
+    "    final_distance = np.sqrt(sq_distance - \n",
+    "                      alpha * np.square((dx*s_vectors[:, 0]+dy*s_vectors[:, 1]+dz*s_vectors[:, 2])) -\n",
+    "                      beta  * np.square((dx*d_vectors[:, 0]+dy*d_vectors[:, 1]+dz*d_vectors[:, 2])))\n",
     "    final_distance = np.transpose(final_distance.reshape(d_verts.shape[0], s_verts.shape[0]))\n",
     "    return(final_distance)\n",
     "\n",
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +252,7 @@
      "output_type": "stream",
      "text": [
       "Loading skeletons, creating graphs\n",
-      "Loading skeleton data from pickle\n",
-      "Calculating distance matrix:\n",
-      "Finding connected component leaves\n",
-      "Finding neighbors\n",
-      "Calculating MST\n",
-      "Writing distance matrix and MST: distance_matrix_brady129.pickle\n"
+      "Loading skeleton data from pickle\n"
      ]
     }
    ],
@@ -256,7 +267,9 @@
     "verts_and_idx = np.hstack([vertices, np.arange(len(vertices)).reshape(-1, 1)])\n",
     "\n",
     "subgraphs = list(sorted(nx.connected_components(G), key=len, reverse=True))\n",
-    "sG = G.subgraph(subgraphs[0])\n",
+    "nx_subgraphs = [G.subgraph(subgraph) for subgraph in subgraphs]\n",
+    "sG = nx_subgraphs[0]\n",
+    "\n",
     "# root_edges = np.array(sG.edges)\n",
     "\n",
     "# root_indices = np.unique(root_edges.copy().flatten())\n",
@@ -265,8 +278,76 @@
     "root_degrees = np.array(G.degree(root_indices))\n",
     "root_leaves = root_degrees[root_degrees[:, 1] == 1, 0]\n",
     "leaf_verts = vertices[root_leaves, :]\n",
-    "root_mean = np.mean(root_verts, axis=0).reshape((1,3))\n",
+    "root_mean = np.mean(root_verts, axis=0).reshape((1,3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subgraph_vectors = [get_subgraph_vector(subgraph, vertices, root_mean) for subgraph in nx_subgraphs[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[79.22114648 79.22528959 79.22743174 79.222255   79.22098694]\n",
+      " [79.99784683 80.00078414 80.002567   79.99846171 79.99782762]\n",
+      " [79.3186228  79.3224113  79.32444932 79.31958516 79.31850508]\n",
+      " [79.61538218 79.61857122 79.62043165 79.61609846 79.61533459]\n",
+      " [80.18116284 80.18408577 80.18586232 80.18177314 80.1811446 ]]\n",
+      "[[36.84562368 36.96521667 37.00026231 36.89496502 36.83149496]\n",
+      " [37.16848043 37.28771541 37.32265482 37.21767492 37.15439353]\n",
+      " [36.8813744  37.00085524 37.03586813 36.93066939 36.86725899]\n",
+      " [37.00145722 37.12075533 37.15571437 37.05067702 36.98736328]\n",
+      " [37.25105964 37.37029953 37.40523968 37.30025661 37.23697191]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_root_vert = np.average(root_verts, axis=0).reshape((1,3))\n",
     "\n",
+    "\n",
+    "mlab.clf()\n",
+    "sg1 = G.subgraph(subgraphs[4200])\n",
+    "sg2 = G.subgraph(subgraphs[4201])\n",
+    "plot_subgraph(sg1, vertices)\n",
+    "plot_subgraph(sg2, vertices)\n",
+    "s_vector, distal_leaf = get_subgraph_vector(sg1, vertices, mean_root_vert, get_distal_leaf=True)\n",
+    "d_vector = get_subgraph_vector(sg2, vertices, mean_root_vert)\n",
+    "\n",
+    "s_verts = vertices[sg1.nodes, :]\n",
+    "d_verts = vertices[sg2.nodes, :]\n",
+    "distances = get_elliptical_distance(s_verts, d_verts, 0.8, s_vector, 0.8, d_vector)\n",
+    "print(spatial.distance.cdist(s_verts, d_verts))\n",
+    "print(distances)\n",
+    "mlab.show()\n",
+    "#get_elliptical_distance(s_verts, d_verts, alpha, vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.repeat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pickle_name = \"distance_matrix_{}.pickle\".format(DIRECTORY)\n",
     "if os.path.exists(pickle_name):\n",
     "    print(\"Reading distance matrix from file: {}\".format(pickle_name))\n",
@@ -321,24 +402,16 @@
     "\n",
     "    print(\"Writing distance matrix and MST: {}\".format(pickle_name))\n",
     "    with open(pickle_name, \"wb\") as fi:\n",
-    "        pickle.dump([distance_matrix, mst], fi)\n"
+    "        pickle.dump([distance_matrix, mst], fi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mst_subgraphs = list(sorted(nx.connected_components(mst), key=len, reverse=True))\n",
     "root_mst = mst.subgraph(mst_subgraphs[0])\n",
@@ -363,100 +436,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1576., 1253.,  326.])"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vertices[1688]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1582., 1252.,  332.])"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vertices[116252]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1688, 4728]])"
-      ]
-     },
-     "execution_count": 265,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "end_indices_sub[end_indices_sub[:, 0]==1688, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1688, 108290}"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subgraphs[4728]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0.])"
-      ]
-     },
-     "execution_count": 290,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subgraph = G.subgraph(subgraphs[4728])\n",
     "mean_root_vert = root_mean\n",
@@ -476,96 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[898.14599609 774.08898926  15.        ]\n",
-      " [897.99798584 773.309021    15.        ]\n",
-      " [898.10198975 773.99102783  15.        ]\n",
-      " [898.02801514 773.69299316  15.        ]\n",
-      " [897.99700928 773.125       15.        ]]\n",
-      "[[-2.05993652e-01  7.89110107e+01  7.00000000e+00]\n",
-      " [-5.79833984e-02  7.96909790e+01  7.00000000e+00]\n",
-      " [-1.61987305e-01  7.90089722e+01  7.00000000e+00]\n",
-      " [-8.80126953e-02  7.93070068e+01  7.00000000e+00]\n",
-      " [-5.70068359e-02  7.98750000e+01  7.00000000e+00]]\n",
-      "[79.22114648 79.99784683 79.3186228  79.61538218 80.18116284]\n"
-     ]
-    }
-   ],
-   "source": [
-    "mean_root_vert = np.average(root_verts, axis=0).reshape((1,3))\n",
-    "\n",
-    "def get_subgraph_vector(subgraph, vertices, mean_root_vert):\n",
-    "    degrees = np.array(subgraph.degree())\n",
-    "    leaf_indices = degrees[degrees[:, 1] == 1, 0]\n",
-    "    leaf_verts = vertices[leaf_indices, :]\n",
-    "    distal_leaf = leaf_verts[np.argmax(spatial.distance.cdist(mean_root_vert, leaf_verts)), :]\n",
-    "    root_vector = np.mean(leaf_verts - distal_leaf, axis=0)\n",
-    "    root_vector = root_vector/np.linalg.norm(root_vector)\n",
-    "    return (root_vector, distal_leaf)\n",
-    "    \n",
-    "def get_elliptical_distance(s_verts, d_verts, alpha, vector):\n",
-    "    d_verts_br = d_verts[:, None, None, :]\n",
-    "    dxdxdz = d_verts_br-s_verts\n",
-    "    \n",
-    "    vectors = dxdxdz[0,0,:,:]\n",
-    "    norms = np.linalg.norm(vectors, axis=1)\n",
-    "    print(s_verts)\n",
-    "    print(vectors)\n",
-    "    print(norms)\n",
-    "    \n",
-    "    dest_vertex = d_verts[0, :].reshape([1, -1])\n",
-    "    mlab.points3d(dest_vertex[:, 0], dest_vertex[:, 1], dest_vertex[:,2], color=)\n",
-    "    \n",
-    "    mlab.quiver3d(s_verts[:, 0], s_verts[:, 1], s_verts[:, 2], vectors[:, 0],\n",
-    "                     vectors[:, 1],\n",
-    "                     vectors[:, 2], scalars=norms, scale_mode=\"scalar\", scale_factor=1, line_width=5)\n",
-    "    \n",
-    "    dx = dxdxdz[:, :, :, 0]\n",
-    "    dy = dxdxdz[:, :, :, 1]\n",
-    "    dz = dxdxdz[:, :, :, 2]\n",
-    "    sq_distance = dx*dx + dy*dy + dz*dz\n",
-    "    alpha = 0.9\n",
-    "    final_distance = sq_distance - alpha * np.square((dx*vector[:, 0]+dy*vector[:, 1]+dz*vector[:, 2]))\n",
-    "    final_distance = np.transpose(final_distance.reshape(d_verts.shape[0], s_verts.shape[0]))\n",
-    "    return(final_distance)\n",
-    "\n",
-    "mlab.clf()\n",
-    "sg1 = G.subgraph(subgraphs[4200])\n",
-    "sg2 = G.subgraph(subgraphs[4201])\n",
-    "plot_subgraph(sg1, vertices)\n",
-    "plot_subgraph(sg2, vertices)\n",
-    "vector, distal_leaf = get_subgraph_vector(sg1, vertices, mean_root_vert)\n",
-    "vector = vector.reshape(1,3)\n",
-    "distal_leaf = distal_leaf.reshape(1,3)\n",
-    "s_verts = vertices[sg1.nodes, :]\n",
-    "d_verts = vertices[sg2.nodes, :]\n",
-    "get_elliptical_distance(s_verts, d_verts, alpha, vector)\n",
-    "mlab.show()\n",
-    "#get_elliptical_distance(s_verts, d_verts, alpha, vector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{343348, 349016, 408572, 408573, 408579}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mlab.points3d(s_verts[:,0], s_verts[:,1], s_verts[:,2])\n",
     "plot_edges(root_edges, vertices, color=(0,0,0), line_width=3.0)"
@@ -573,22 +504,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2]\n",
-      " [ 3  4  5]\n",
-      " [ 6  7  8]\n",
-      " [ 9 10 11]]\n",
-      "[[2 3 4]\n",
-      " [5 6 7]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.arange(12).reshape((4,3))\n",
     "b = np.arange(2,8).reshape((2,3))\n",
@@ -598,38 +516,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[[ 2  2  2]\n",
-      "   [-1 -1 -1]\n",
-      "   [-4 -4 -4]\n",
-      "   [-7 -7 -7]]]\n",
-      "\n",
-      "\n",
-      " [[[ 5  5  5]\n",
-      "   [ 2  2  2]\n",
-      "   [-1 -1 -1]\n",
-      "   [-4 -4 -4]]]]\n",
-      "[[ 2  2  2]\n",
-      " [-1 -1 -1]\n",
-      " [-4 -4 -4]\n",
-      " [-7 -7 -7]]\n",
-      "[[[ 12   3  48 147]]\n",
-      "\n",
-      " [[ 75  12   3  48]]]\n",
-      "[[ 7.31318317 45.70739483]\n",
-      " [ 1.82829579  7.31318317]\n",
-      " [29.25273269  1.82829579]\n",
-      " [89.58649387 29.25273269]]\n",
-      "(4, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b_br = b[:, None, None, :]\n",
     "res = b_br-a\n",
@@ -656,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,41 +574,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.46410162,  1.73205081,  6.92820323, 12.12435565])"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.linalg.norm(res[0,0,:,:], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-146-21d438028d9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdistal_leaf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: too many indices for array"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distal_leaf[:, 1]"
    ]
@@ -740,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,20 +615,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.dot(u, v)/np.linalg.norm(u)*np.linalg.norm(v)"
    ]
